Title changed and an h1 added to index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Sharezza Social</title>
   </head>
   <body>
   
+	<1> Welcome to Sharezza Social </1>
   </body>
 </html>
